objects/tffa__ApplicationPartyXref__c.object
<CustomObject>
    <description>Each Applicant of the submission can play different roles in the application and the eventual account.</description>
    <fields>
        <fullName>CZFISRelationshipCode__c</fullName>
        <description>FIS Relationship Code</description>
        <encryptionScheme>None</encryptionScheme>
        <label>FIS Relationship Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartyLegalName__c</fullName>
        <description>This field has the legal name which can be used in case of Organisation Name</description>
        <formula>tffa__Party__r.tffa__LegalName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PartyLegalName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartyPersonName__c</fullName>
        <description>This field has the first name and last name of party</description>
        <formula>UPPER(LEFT( tffa__Party__r.tffa__FirstName__c,1 ))&amp;LOWER(Mid( tffa__Party__r.tffa__FirstName__c, 2, Len( tffa__Party__r.tffa__FirstName__c )-1))&amp; &quot;, &quot; &amp; UPPER(LEFT( tffa__Party__r.tffa__LastName__c,1 ))&amp;LOWER(Mid( tffa__Party__r.tffa__LastName__c, 2, Len( tffa__Party__r.tffa__LastName__c)-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PartyPersonName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ApplicantRole__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The role played by the party in the application. Finally translates to role on opened account.</description>
        <label>Role</label>
        <referenceTo>tffa__ApplicantRole__c</referenceTo>
        <relationshipLabel>Application Parties</relationshipLabel>
        <relationshipName>ApplicationPartyXrefs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Application__c</fullName>
        <description>Reference to application object</description>
        <label>Application</label>
        <referenceTo>tffa__Application__c</referenceTo>
        <relationshipLabel>Parties</relationshipLabel>
        <relationshipName>PartyXrefs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__ExistingCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the current applicant is an existing customer of the bank. Derived from party reference.</description>
        <label>Existing Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Party__c</fullName>
        <description>Reference to party</description>
        <label>Party</label>
        <referenceTo>tffa__Party__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__PrimaryContact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies primary point of contact in a business application. This is different from primary field which identifies the primary applicant. e.g. The primary applicant in a business application is a business. Defaults to SubmissionPartyXref.PrimaryContact.</description>
        <label>Primary contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the current applicant is primary applicant of the application.</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__RoleAuthority__c</fullName>
        <description>A semicolon delimited list of account authority powers which can be assigned to each applicant on the account.</description>
        <label>Role Authority</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ApplicantRoleAuthority</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__RoleCategory__c</fullName>
        <defaultValue>&quot;OWNER&quot;</defaultValue>
        <description>Denormalized category field of applicant role.</description>
        <label>Role category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ApplicantRoleCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__RoleCode__c</fullName>
        <description>Denormalized code field of applicant role.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Role code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__RoleName__c</fullName>
        <description>Denormalized name field of applicant role.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Role name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Role__c</fullName>
        <defaultValue>&quot;OWNER&quot;</defaultValue>
        <description>The applicant role with respect to this application. Values could be BORROWER,CO-SIGNER,GUARDIAN,AUTHORIZEDSIGNATORY,OTHER,OWNER,JOINTOWNER, GUARANTOR</description>
        <label>Role (deprecated)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ApplicantRole</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Controls the relative order of the item in a list.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Type__c</fullName>
        <description>Type of the party. Allowed values are - INDIVIDUAL, ORGANIZATION</description>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartyType</valueSetName>
        </valueSet>
    </fields>
    <label>Application Party</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Parties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>